<resources>
    <string name="app_name">mobile uts</string>
    <string name="content_description">none</string>
    <string name="hot_news_for_you">Hot News for you</string>
    <string name="page_title_home">Home</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Masukan Username</string>
    <string name="password_hint">Masukan Password</string>
    <string name="repassword_hint">Masukan Ulang Password</string>
    <string name="login_desc"><![CDATA[Silahkan Masukan Username & Password Anda]]></string>
    <string name="register_desc"><![CDATA[Silahkan Buat Username & Password Anda]]></string>
    <string name="register_title">Register</string>
    <string name="email">Email\n</string>
    <string name="kata_sandi">Password\n</string>
    <string name="sign_in">Sign In</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="registration">Registrasi</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="buat_kata_sandi">Buat kata sandi</string>
    <string name="ulang_kata_sandi">Ulang kata sandi</string>
    <string name="sudah_punya_akun">Sudah punya akun</string>
    <string name="sport">Olahraga</string>
    <string name="bisnis">Bisnis</string>
    <string name="tech">Teknologi</string>
    <string name="general">Umum</string>
    <string name="title">Daily News</string>
</resources>